--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
     </div>
 
     <script>
-        fetch("https://manadoku.onrender.com")
+        fetch("https://manadoku.onrender.com/get_strings")
             .then(response => response.json())
             .then(data => {
                 console.log("Data received from backend:", data);
