--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
 
         .grid-item.incorrect {
             background-color: orange;
+            transition: background-color 0.3s ease;
         }
 
         .modal {
