setting grid item size

--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
         }
 
         .grid-item {
+            width: 150px;
+            height: 150px;
+            border: 1px solid black;
             display: flex;
             align-items: center;
             justify-content: center;
