--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
             grid-template-rows: repeat(4, 1fr);
             /* 4 equal rows */
             gap: 10px;
+            width: 600px;
+            height: 600px;
             margin: 20px auto;
             border: 2px solid #333;
             background-color: #f0f0f0;
@@ -24,7 +26,7 @@
 
         .grid-item {
             width: 150px;
-            height: 150px;
+            height: 150px; 
             border: 1px solid black;
             display: flex;
             align-items: center;
