--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
             background-color: #fff;
             font-size: 14px;
             font-weight: bold;
+            object-fit: contain;
         }
 
         .grid-item.empty {
