--- a/index.html
+++ b/index.html
@@ -248,10 +248,16 @@
                                 targetBox.classList.remove("incorrect")
                                 targetBox.classList.add("completed");
                                 const img = document.createElement('img')
+
                                 img.src = result.img
                                 img.alt = "Card Image"
-                                img.style.width = "100%"
-                                img.style.height = "100%"
+
+                                img.style.maxWidth = "100%"
+                                img.style.maxHeight = "100%"
+                                img.style.objectFit = "contain"
+                                img.style.display = "block"
+
+                                targetBox.innerHTML = ""
                                 targetBox.appendChild(img)
                             } else {
                                 targetBox.classList.add("incorrect")
