fix grid to card size

--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
         }
 
         .grid-item {
-            width: 150px;
-            height: 150px; 
+            width: 100%;
+            aspect-ratio: 0.714 / 1;
             border: 1px solid black;
             display: flex;
             align-items: center;
             justify-content: center;
-            text-align: center;
+            overflow: hidden;
             border: 1px solid #ccc;
             background-color: #fff;
             font-size: 14px;
