--- a/index.html
+++ b/index.html
@@ -14,29 +14,23 @@
             display: grid;
             grid-template-columns: repeat(4, minmax(0, 1fr));
             gap: 10px;
-            max-width: 640px;
+            max-width: 100%;
+            width: min(90vw, 700px);
             margin: 20px auto;
         }
 
         .grid-item {
-    aspect-ratio: 0.714 / 1;
-    width: 100%;
-    border: 1px solid #ccc;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    overflow: hidden;
-    background-color: #fff;
-    font-size: 14px;
-    font-weight: bold;
-}
+            perspective: 1000px;
+            aspect-ratio: 0.714 / 1;
+            width: 100%;
+        }
 
-.grid-item img {
-    width: 100%;
-    height: 100%;
-    object-fit: contain;
-    display: block;
-}
+        .grid-item img {
+            width: 100%;
+            height: 100%;
+            object-fit: contain;
+            display: block;
+        }
 
         .grid-item.empty {
             background-color: #e0e0e0;
@@ -51,6 +45,37 @@
         .grid-item.incorrect {
             background-color: orange;
             transition: background-color 0.3s ease;
+        }
+
+        .card-inner {
+            position: relative;
+            width: 100%;
+            height: 100%;
+            transform-style: preserve-3d;
+            transition: transform 0.6s ease;
+        }
+
+        .card-front,
+        .card-back {
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            backface-visibility: hidden;
+            top: 0;
+            left: 0;
+        }
+
+        .card-front {
+            background-color: #eee;
+        }
+
+        .card-back {
+            background-color: white;
+            transform: rotateY(180deg);
+        }
+
+        .grid-item.flipped .card-inner {
+            transform: rotateY(180deg);
         }
 
         .modal {
