--- a/index.html
+++ b/index.html
@@ -13,13 +13,15 @@
         .grid-container {
             display: grid;
             grid-template-columns: repeat(4, minmax(0, 1fr));
-            gap: 10px;
+            gap: 4px;
             max-width: 100%;
             width: min(90vw, 700px);
             margin: 20px auto;
+            background-color: black;
         }
 
         .grid-item {
+            background-color: white;
             perspective: 1000px;
             aspect-ratio: 0.714 / 1;
             width: 100%;
@@ -38,7 +40,6 @@
         }
 
         .grid-item.completed {
-            background-color: blue;
             pointer-events: none; /* Prevent further clicks */
         }
 
