trying to get rid of card gaps

--- a/index.html
+++ b/index.html
@@ -22,9 +22,10 @@
 
         .grid-item {
             background-color: white;
-            perspective: 1000px;
             aspect-ratio: 0.714 / 1;
             width: 100%;
+            height: auto;
+            position: relative;
         }
 
         .grid-item img {
@@ -64,6 +65,7 @@
             backface-visibility: hidden;
             top: 0;
             left: 0;
+            inset: 0;
         }
 
         .card-front {
