--- a/index.html
+++ b/index.html
@@ -59,13 +59,19 @@
 
         .card-front,
         .card-back {
-            position: absolute;
+                width: 100%;
+                height: 100%;
+                padding: 0;
+                margin: 0;
+                border: none;
+                box-sizing: border-box;
+        }
+
+        .card-front img,
+        .card-back img {
             width: 100%;
             height: 100%;
-            backface-visibility: hidden;
-            top: 0;
-            left: 0;
-            inset: 0;
+            object-fit: cover;
         }
 
         .card-front {
