--- a/index.html
+++ b/index.html
@@ -59,12 +59,13 @@
 
         .card-front,
         .card-back {
-                width: 100%;
-                height: 100%;
-                padding: 0;
-                margin: 0;
-                border: none;
-                box-sizing: border-box;
+            width: 100%;
+            height: 100%;
+            padding: 0;
+            margin: 0;
+            border: none;
+            box-sizing: border-box;
+            backface-visibility: hidden;
         }
 
         .card-front img,
