--- a/index.html
+++ b/index.html
@@ -59,19 +59,13 @@
 
         .card-front,
         .card-back {
-                width: 100%;
-                height: 100%;
-                padding: 0;
-                margin: 0;
-                border: none;
-                box-sizing: border-box;
-        }
-
-        .card-front img,
-        .card-back img {
+            position: absolute;
             width: 100%;
             height: 100%;
-            object-fit: cover;
+            backface-visibility: hidden;
+            top: 0;
+            left: 0;
+            inset: 0;
         }
 
         .card-front {
