--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         .grid-item img {
             width: 100%;
             height: 100%;
-            object-fit: contain;
+            object-fit: cover;
             display: block;
         }
 
