--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         }
 
         .card-back {
-            background-color: white;
+            background-color: black;
             transform: rotateY(180deg);
         }
 
