--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
             backface-visibility: hidden;
             top: 0;
             left: 0;
+            background-color: black;
         }
 
         .card-front {
