--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         }
 
         .grid-item {
-            background-color: white;
+            background-color: black;
             perspective: 1000px;
             aspect-ratio: 0.71 / 1;
             width: 100%;
