--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             max-width: 100%;
             width: min(90vw, 700px);
             margin: 20px auto;
-            background-color: black;
+            background-color: white;
         }
 
         .grid-item {
