--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
             height: 100%;
             transform-style: preserve-3d;
             transition: transform 0.6s ease;
+            background-color: black;
         }
 
         .card-front,
