--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
             object-fit: cover;
             display: block;
             background-color: black;
+            border-radius: 6px;
         }
 
         .grid-item.empty {
