--- a/index.html
+++ b/index.html
@@ -153,8 +153,8 @@
     <div class="left-side">
         <h1>Manadoku - Random MTG Grid Puzzle</h1>
         <div>
-            <button>Rules</button>
-            <button>New Game</button>
+            <button id="rulesButton">Rules</button>
+            <button id="newGameButton">New Game</button>
         </div>
     </div>
 </div>
